--- a/TnkEyes/TnkEyes.csproj
+++ b/TnkEyes/TnkEyes.csproj
@@ -51,7 +51,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TonNurako\TonNurako.csproj">
+    <ProjectReference Include="..\TonNurako\TonNurako\TonNurako.csproj">
       <Project>{936e32ea-d5cb-41b5-b75a-a282db26cc1c}</Project>
       <Name>TonNurako</Name>
     </ProjectReference>
